--- a/frontend/blackjackf/src/App.css
+++ b/frontend/blackjackf/src/App.css
@@ -12,11 +12,21 @@ h3 {
 
 /* LANDING PAGE */
 
-.hero-section {
-  color:white;
-  background: url(images/CityPicture.jpg);
-  background-size: contain;
+.hero-image {
+  background-image:  url("./images/CityPicture.jpg");
+  height: 400px;
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: left;
+  position: absolute;
+  top: 20%;
+  left: 60%;
+  color: white;
 }
 
 /* ABOUT PAGE */
