Landing page completed, added more funtionality to footer.

--- a/frontend/blackjackf/src/components/Footer/footer.css
+++ b/frontend/blackjackf/src/components/Footer/footer.css
@@ -1,4 +1,5 @@
 .main-footer{
+    margin-top: 20px;
     color: #fff;
     background-color: #171A29;
 }
@@ -33,4 +34,7 @@ a:hover {
 
 li{
     padding-bottom: 7px;
+}
+h4{
+    margin-top: 15px;
 }
