--- a/frontend/blackjackf/src/pages/Gameboard/Gameboard.css
+++ b/frontend/blackjackf/src/pages/Gameboard/Gameboard.css
@@ -1,9 +1,15 @@
 .GBMain{
+    background-image: url('../../images/table_blackjack.png');
+    height: 85vh;
+    width: 95vw;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 20px;
+    
 }
 .welcome{
     margin-left: 100px;
@@ -12,4 +18,30 @@
 .boardBackground{
     height: 80vh;
     width: 80vw;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+  .modal_content {
+    width:500px;
+    background-color: white;
+    position: absolute;
+    text-align: center;
+  }
+
+.dealer-section{
+    margin: 20px 0px 20px;
+}
+.player-section{
+    display: flex;
+    flex-direction: row;
+}
+.player-buttons{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    justify-content: space-around;
 }
