--- a/frontend/blackjackf/src/App.css
+++ b/frontend/blackjackf/src/App.css
@@ -58,13 +58,13 @@ h3 {
 /* HOW TO PLAY PAGE */
 
 .howtoplay-top-banner {
-width: 100vw;
-height: 300px;
+  height: 33vh;
+  width: 100vw;
 }
 
 .howtoplay-bottom-banner {
-width: 100vw;
-height: 300px;
+  height: 40vh;
+  width: 100vw;
 }
 
 .howtoplay-body-container {
