--- a/frontend/blackjackf/src/pages/Landing/MeetUs/MeetUs.css
+++ b/frontend/blackjackf/src/pages/Landing/MeetUs/MeetUs.css
@@ -23,7 +23,7 @@
     padding-bottom: 2%;
 }
 .info-card{
-    /* margin-right: 50px; */
+    position:sticky;
     border-radius: 5%;
     background: rgba(255,255,255,.4);
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -32,6 +32,11 @@
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     margin: auto;
 }
+.info-card-wrapper{
+    display: flex;
+    height: auto;
+    width: auto;
+}
 .top-line{
     display: flex;
     width: 200px;
@@ -39,6 +44,9 @@
 }
 .bot-line{
     margin: 0px 8px 0px 8px;
+}
+.name{
+    color: rgb(32, 32, 32);
 }
 
 .meet-img{
