--- a/frontend/blackjackf/src/pages/Gameboard/Gameboard.css
+++ b/frontend/blackjackf/src/pages/Gameboard/Gameboard.css
@@ -42,9 +42,10 @@
     flex-direction: column;
 }
 .cards-heading{
-    color: #ce383b;
+    color: red;
     background-color: #3d6c39;
     text-align: center;
+    padding: 0px 10px 0px 10px;
 }
 .card-img{
     height:27vh;
@@ -58,6 +59,18 @@
     align-items: center;
     width: 300px;
 }
+.new-game{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.new-btn-container{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
 
 .modal-text{
     text-align: center;
@@ -65,6 +78,7 @@
 .modal-title{
     color:black;
     font-size: 50px;
+    margin: 0;
 }
 .modal-subtitle{
     font-size: 25px;
@@ -77,16 +91,21 @@
 .img-container{
     display: flex;
     justify-content: center;
+    height: auto;
 }
 .modal-img{
-    height: 50%;
-    width: 88%;
+    height: 40vh;
+    width: 80vw;
 }
 .game-status{
     width: 100vw;
     height: 90px;
     display: flex;
     justify-content: center;
+    flex-direction: row;
+}
+.bold{
+   color: red;
 }
 
 .game-status.win{
